--- a/index.html
+++ b/index.html
@@ -10,7 +10,49 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+</body>
+
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <title>Frontend Mentor | QR code component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="img-container">
+    <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor">
+  </div>
+  <h1>Improve your front-end skills by building projects</h1>
+  <p class="content">
+    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  </p>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Dustin Cowley</a>.
+  </div>
 </body>
 
 </html>
