--- a/index.html
+++ b/index.html
@@ -3,26 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frontend Challenge QR Code</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-</body>
-
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon-32x32.png">
 
   <title>Frontend Mentor | QR code component</title>
 
@@ -41,17 +25,17 @@
 
 <body>
 
-  <div class="img-container">
+  <div class="container">
     <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor">
-  </div>
-  <h1>Improve your front-end skills by building projects</h1>
-  <p class="content">
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  </p>
+    <h1>Improve your front-end skills by building projects</h1>
+    <p class="content">
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    </p>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Dustin Cowley</a>.
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Dustin Cowley</a>.
+    </div>
   </div>
 </body>
 
