--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 <body>
 
   <div class="container">
-    <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor">
-    <h1>Improve your front-end skills by building projects</h1>
-    <p class="content">
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-    </p>
+    <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-img">
+    <div class="text-container">
+      <h1>Improve your front-end skills by building projects</h1>
+      <p class="content">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
+    </div>
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
