--- a/index.html
+++ b/index.html
@@ -12,18 +12,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -36,12 +24,15 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
     </div>
+  </div>
 
-    <div class="attribution">
+  <footer>
+    <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Dustin Cowley</a>.
-    </div>
-  </div>
+    </p>
+  </footer>
+
 </body>
 
 </html>
