--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Dustin Cowley</a>.
+      Coded by <a href="https://github.com/DustinCowley" target="_blank" rel="noreferrer noopener">Dustin Cowley</a>.
     </p>
   </footer>
 
