--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 </head>
 
 <body>
-
-  <div class="container">
+  <main class="container">
     <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-img">
-    <div class="text-container">
+    <div class="text-container" role="text-container">
       <h1>Improve your front-end skills by building projects</h1>
       <p class="content">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
     </div>
-  </div>
+  </main>
 
   <footer>
     <p class="attribution">
