--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <main class="container">
     <img src="./imgs/image-qr-code.png" alt="QR Code for Frontend Mentor" class="qr-img">
-    <div class="text-container" role="text-container">
+    <div class="text-container">
       <h1>Improve your front-end skills by building projects</h1>
       <p class="content">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
